@startuml
!define primary_key(x) <b>x</b>
!define foreign_key(x) <i>x</i>

entity Persona {
    primary_key(id) INT
    nombre VARCHAR(50)
    apellido VARCHAR(50)
    documento VARCHAR(10) UNIQUE
    telefono VARCHAR(10)
}

entity Rol {
    primary_key(id) INT
    nombre VARCHAR(50)
}

entity Usuario {
    primary_key(id) INT
    username VARCHAR(50)
    password VARCHAR(255)
    foreign_key(idPersona) INT
    foreign_key(idRol) INT
}

entity Empresa {
    primary_key(id) INT
    nombre VARCHAR(100)
    ubicacion VARCHAR(255)
}

entity Ubicacion {
    primary_key(id) INT
    direccion VARCHAR(255)
    ciudad VARCHAR(50)
    pais VARCHAR(50)
}

entity Reserva {
    primary_key(id) INT
    foreign_key(idCliente) INT
    foreign_key(idServicio) INT
    foreign_key(idEstadoReserva) INT
    fecha TIMESTAMP
}

entity EstadoReserva {
    primary_key(id) INT
    nombre VARCHAR(50)
}

entity Servicio {
    primary_key(id) INT
    nombre VARCHAR(50)
    descripcion TEXT
    foreign_key(idTarifa) INT
    foreign_key(idCategoriaServicio) INT
}

entity CategoriaServicio {
    primary_key(id) INT
    nombre VARCHAR(50)
}

entity Tarifa {
    primary_key(id) INT
    precio DECIMAL(10,2)
    duracionMinutos INT
}

entity Horario {
    primary_key(id) INT
    foreign_key(idEmpleado) INT
    diaSemana VARCHAR(10)
    horaInicio TIME
    horaFin TIME
}

entity Factura {
    primary_key(id) INT
    foreign_key(idCliente) INT
    fecha TIMESTAMP
}

entity DetalleFactura {
    primary_key(id) INT
    foreign_key(idFactura) INT
    foreign_key(idServicio) INT
    foreign_key(idPago) INT
}

entity Pago {
    primary_key(id) INT
    tipoPago VARCHAR(20)
    monto DECIMAL(10,2)
    fechaPago TIMESTAMP
}

' Relaciones entre entidades
Persona ||--o{ Usuario : "es"
Rol ||--o{ Usuario : "tiene"
Usuario ||--o{ Reserva : "realiza"
Reserva }o--|| Servicio : "incluye"
Reserva ||--|| EstadoReserva : "tiene"
Servicio }o--|| Tarifa : "usa"
Servicio ||--|| CategoriaServicio : "clasifica"
Usuario ||--o{ Horario : "asigna"
Usuario ||--o{ Factura : "recibe"
Factura }o--|| DetalleFactura : "contiene"
DetalleFactura }o--|| Servicio : "incluye"
DetalleFactura }o--|| Pago : "registra"
Empresa ||--o{ Ubicacion : "tiene"
@enduml
